--- a/empresas.html
+++ b/empresas.html
@@ -366,13 +366,38 @@
 
       </div>
     </section>
-    <section>
-      <div>
-        <h2>Votación de SPOT</h2>
-        <p>Elija su spot preferido</p>
-        
+    <section id="seccion-votacion" class="impar">
+      <h2>Vota por tu Spot Favorito</h2>
+      <p>Ayúdanos a elegir el mejor spot publicitario de las empresas participantes</p>
+      <div class="grid-spots-votacion">
+
+        <div class="card-spot-empresa">
+          <h3>Empresa A S.L.</h3>
+          <p>Spot: "Innovación y futuro"</p>
+          <div class="spot-video-preview">
+            <a href="#" target="_blank" title="Ver Spot">
+                <i class="bi bi-play-circle-fill"></i>
+            </a>
+          </div>
+          <button class="btn-votar" data-empresa="A">
+            <i class="bi bi-star-fill"></i> Votar
+          </button>
+        </div>
+
+        <div class="card-spot-empresa">
+          <h3>Empresa B Corp</h3>
+          <p>Spot: "Tu carrera empieza aquí"</p>
+          <div class="spot-video-preview">
+            <a href="#" target="_blank" title="Ver Spot">
+              <i class="bi bi-play-circle-fill"></i>
+            </a>
+          </div>
+          <button class="btn-votar" data-empresa="B">
+            <i class="bi bi-star-fill"></i> Votar
+          </button>
+        </div>
       </div>
-    </section>
+  </section>
     <footer class="impar">
       Feria de Empleo de Irún &copy; 2025
     </footer>
